public/css/main.css
html {
  margin: 0;
  padding: 0;
}

.container {
  width: 80%;
  margin: 0 auto;
  padding: 0;
}

header {
  background-color: #ffe540;
}

header h1 {
  margin: 0;
  padding: 0;
  line-height: 128px;
}

header a {
  color: #29AB87;
  text-shadow: 0px -1px 1px rgba(0,0,0,.5);
  text-decoration: none;
}

nav {
  margin-bottom: 30px;
  width: 100%;
  text-align: right;
  color: #FFF6E5;
  height: 128px;
}

nav a:hover {
  color: brown;
}

header ul {
  margin: 0;
  padding: 0;
}

.nav li {
  display: inline;
  color: brown;
  font-size: 2em;
  padding: 18px;
  line-height: 128px;
}

#logo {
  list-style: none;
  float:left;
  font-size: 4em;
}



/* Button */

.button {
  margin: 32px;
  font-weight: bold;
  background-color: #FFE540;
  border: none;
  border-radius: 8px;
  padding: 8px;
  text-shadow: 0px 1px 1px rgba(255,255,255,.5);
}

.button:hover {
  background-color: brown;
  color: #fff;
  text-shadow: 0px -1px 1px rgba(0,0,0,.5);
}

/* Survey List on Profile Page */

.survey_list {
  padding: 0;
  list-style: none;
  padding-left: 16px;
}

.survey_list li {
  margin-bottom: 16px;
}

.survey_list h2, .survey_list p {
  margin: 0;
  padding: 0;
}

.survey_list a {
  text-decoration: none;
  color: brown;
  text-shadow: 0px 1px 1px rgba(0,0,0,.5);
}

/* Create Survey Form */

#create_survey {
  width: 500px;
  padding: 16px;
  text-align: center;
  border: 2px solid rgba(255,229,64,1);
  border-radius: 8px;
  background-color: rgba(255,229,64,.25);
}

#create_survey input, #create_survey textarea {
  width: 460px;
  padding: 8px;
  margin: 8px;
}

#create_survey[input=submit] {
  width: 500px;
}

#create_survey {
  width: 100%;
}

/* Formatted Question List for survey/:survey_id */

.question_list li {
  margin: 8px 0;
}

.question_list ul {
  margin-bottom: 32px;
  list-style: none;
  padding: 0;
}

.question_list ul li input {
  margin-right: 8px;
}

/* Google Chart Visualization */

div #visualization {
  width:600px;
  height:400px;
  margin-left: 10%
}

div .visualization {
  text-align: right;
  float:right;

}

div .result {
  height: 250px;
}

div .vis-container {
  height: 250px;
}

div .left-column {
  float:left;
  width:49%;
  position:relative;
}

div .right-column {
  float:left;
  width:49%;
  position:relative;
}

